deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: go-server
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: server-api:latest
          imagePullPolicy: Never
          name: frontend
