frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-svc
  namespace: go-server
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      nodePort: 3200
  selector:
    app: frontend
  type: ClusterIP
