ingress.yaml
apiVersion: networking.k8s.io/v1beta1
#apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: go-server
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: frontend-svc
              servicePort: 3000
